src/objects/c2g__AllocationSchedule__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationscheduler</customHelpPage>
    <description>A scheduled allocation of templates to be run.</description>
    <fields>
        <fullName>c2g__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__After__c</fullName>
        <defaultValue>0</defaultValue>
        <label>After</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Allocation Schedules</relationshipLabel>
        <relationshipName>AllocationSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CronExpression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DateRangeType__c</fullName>
        <label>Date Range Type</label>
        <picklist>
            <picklistValues>
                <fullName>StaticDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DynamicDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StaticPeriod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DynamicPeriod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__DaysBeforeOrAfterRunDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Before Or After Run Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DaysOffsetFromRunDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Offset From &apos;Run&apos; Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DaysOffsetFromToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Offset From &apos;To&apos; Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DaysPriorToToDate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Prior To To Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__EndDateGenerated__c</fullName>
        <label>End Date Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__FromDate__c</fullName>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__FromDay__c</fullName>
        <label>From Day</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__FromInterval__c</fullName>
        <label>From Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__FromOption__c</fullName>
        <label>From Option</label>
        <picklist>
            <picklistValues>
                <fullName>SpecificDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContinuousDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OffsetDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalculatedDate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__FromTime__c</fullName>
        <label>From Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NextContinuousDatetime__c</fullName>
        <label>Next Continuous Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodOption__c</fullName>
        <label>Period Option</label>
        <picklist>
            <picklistValues>
                <fullName>RunDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TransactionDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OffsetDate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PreviousFireTime__c</fullName>
        <label>Previous Fire Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__PreviousToDate__c</fullName>
        <label>Previous To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsByMonth__c</fullName>
        <label>Retrieve Transactions By Month</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsByPeriod__c</fullName>
        <label>Retrieve Transactions By Period</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsFromDate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsOption__c</fullName>
        <label>Retrieve TransactionsOption Option</label>
        <picklist>
            <picklistValues>
                <fullName>RetrieveTransactionsSpecificDates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RetrieveTransactionsByPeriod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RetrieveTransactionsByMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RetrieveTransactionsFromFirstTransaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RetrieveTransactionsFromDaysPriorToToDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RetrieveTransactionsFromLastDates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsToDate__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ScheduleExpiresOption__c</fullName>
        <label>Schedule Ends</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EndBy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ToDate__c</fullName>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__ToDay__c</fullName>
        <label>To Day</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ToInterval__c</fullName>
        <label>To Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ToOption__c</fullName>
        <label>To Option</label>
        <picklist>
            <picklistValues>
                <fullName>SpecificDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContinuousDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OffsetDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CalculatedDate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ToTime__c</fullName>
        <label>To Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDateOption__c</fullName>
        <label>Transaction Date Option</label>
        <picklist>
            <picklistValues>
                <fullName>SpecificDate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OffsetDate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDescription__c</fullName>
        <label>Transaction description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UserDefinedName__c</fullName>
        <description>The name of the scheduled allocation</description>
        <label>User Defined Name</label>
        <length>243</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Allocation Schedule</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>